<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlack"
        android:orientation="vertical">

        <View style="@style/View" />

        <EditText
            android:id="@+id/accountUsername"
            style="@style/EditText"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/accountPassword"
            style="@style/EditText"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/accountConfirm"
            style="@style/EditText"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <View style="@style/View" />

        <Button
            android:id="@+id/accountSave"
            style="@style/Button"
            android:text="@string/save" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/account_progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/red"
        android:minWidth="150dp"
        android:minHeight="150dp"
        android:visibility="gone" />
</FrameLayout>