<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/lightBlack">

    <View style="@style/View"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/really"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

    <View style="@style/View"/>

    <Button
            android:id="@+id/deleteNo"
            style="@style/Button"
            android:text="@string/no"/>

    <Button
            android:id="@+id/deleteYes"
            style="@style/Button"
            android:text="@string/yes"/>


</LinearLayout>